// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.22.0

package db

import (
	"database/sql"
)

type Channel struct {
	ID          string
	ChannelName string
	ChannelUrl  string
	IsSubbed    bool
}

type Video struct {
	ID         string
	VideoType  string
	VideoTitle string
	ChannelID  sql.NullString
}

type WatchHistory struct {
	ID        int64
	VideoID   sql.NullString
	WatchedAt string
	ChannelID sql.NullString
}
