Table videos {
  id varchar [not null, primary key]
  video_type varchar [not null]
  video_title varchar [not null]
  channel_id varchar 
  
  Indexes{
  video_type
  
}
  
}


Table channels {

  id varchar [not null, primary key]
  channel_name varchar [not null]
  channel_url varchar [not null, unique]
  is_subbed bool [not null]
  Indexes{
    is_subbed

}
}




Table watch_history {
  id bigint [primary key]
  video_id varchar 
  watched_at timestamp [not null, unique]
  channel_id varchar

    Indexes{
  video_id
  channel_id
}
}

Ref: watch_history.channel_id > channels.id

Ref: videos.channel_id > channels.id 
Ref: watch_history.video_id > videos.id